--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@types/formidable": "^3.4.6",
+    "@types/uuid": "^10.0.0",
+    "formidable": "^3.5.4",
     "next": "16.0.3",
     "prisma": "^6.19.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
