--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:seed": "node scripts/run-seed.mjs"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.6",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^3.0.3",
     "formidable": "^3.5.4",
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -29,5 +34,8 @@
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "npx ts-node --project prisma/tsconfig.seed.json prisma/seed.ts"
   }
 }
