--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
     "formidable": "^3.5.4",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
@@ -26,14 +27,17 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   },
   "prisma": {
