--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@types/formidable": "^3.4.6",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
