--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate" 
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.6",
     "@types/uuid": "^10.0.0",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
